<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Barcode scanning sample program</string>
    <string name="barcode_name">Barcode scanning</string>
    <string name="but_start">Single scan</string>
    <string name="but_repeat">Repeat scan</string>
    <string name="but_stop">Stop scanning</string>
    <string name="but_close">shut down</string>
    <string name="but_clear">Clear</string>
    <string name="dialog_title">content</string>
    <string name="spinner">Scan key selection</string>

    <string name="DEV_OPEN_ERR">Device open failed！Software will quit！</string>
    <string name="DIA_ALERT">Warning！</string>
    <string name="DIA_CHECK">Confirm</string>

    <string name="but_touch">Press</string>

    <!-- exit -->
    <string name="key_test_back_title">prompt</string>
    <string name="action_exit_title">drop out</string>
    <string name="action_exit_content">Whether to quit the current app</string>
    <string name="action_exit_sure">determine</string>
    <string name="action_exit_cancel" tools:ignore="ButtonCase">cancel</string>
    <string name="action_dialog_setting_config">Please check the "Enable escalation scan key value" and "Enable scan tone" in the auxiliary function.</string>
    <string name="action_dialog_setting_config_sure_go">Go to set</string>
    <string name="scan_time">Number of scans:</string>
    <string name="sound_off">Prompt tone on</string>
    <string name="sound_on">Prompt tone off</string>
    <string name="vibrate_off">Vibration off</string>
    <string name="vibrate_on">Vibration on</string>
    <string name="to_set">Go to set</string>
    <string name="restart">Please tick Enable scan to return to the application.</string>
    <string name="single">Single scan</string>
    <string name="times">Repeat scan</string>
    <string name="explore">Export result</string>
    <string name="sound">Beep</string>
    <string name="vib">shock</string>
    <string name="stop_times">Stop scanning</string>
    <string name="start_times">Repeat scan</string>
    <string name="title_scan">Barcode scanning</string>
    <string name="clear_title">Clear</string>
    <string name="no_file">No content, no files generated</string>
    <string name="explore_success">The export is successful, the file is located in the root directory</string>
    <string name="scan_interval">Change Interval</string>
    <string name="change">Change Interval:</string>
    <string name="please_do_not_click">Please do not click the virtual scan button frequently</string>
    <string name="txt">Explore txt</string>
    <string name="excel">Explore excel</string>

</resources>