<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_cound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        tools:ignore="InefficientWeight">

        <EditText
            android:id="@+id/EditTextReception"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:enabled="false"
            android:textColor="@color/black"
            android:gravity="top"
            android:hint="Reception"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            tools:ignore="Autofill,HardcodedText,ObsoleteLayoutParam,ScrollViewSize,TextFields" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:layout_gravity="right"
        android:gravity="bottom"
        android:orientation="horizontal"
        tools:ignore="DuplicateIds,RtlHardcoded">

        <ToggleButton
            android:id="@+id/button_repeat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:textOff="@string/but_repeat"
            android:textOn="@string/but_stop" />

        <Button
            android:id="@+id/buttonscan"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/but_start" />

        <ToggleButton
            android:id="@+id/butSound"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:textOff="@string/sound_off"
            android:textOn="@string/sound_on" />

        <ToggleButton
            android:id="@+id/butVibrate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:textOff="@string/vibrate_off"
            android:textOn="@string/vibrate_on" />

        <Button
            android:id="@+id/buttonclear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/but_clear" />

    </LinearLayout>
</LinearLayout>
