<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:background="@color/white"
        android:gravity="start"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/code_set"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/sound"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <View
            android:id="@+id/view_end_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color" />

        <TextView
            android:id="@+id/balance_set"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/vib"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <View
            android:id="@+id/view_end_line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color" />


        <TextView
            android:id="@+id/interval_set"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/scan_interval"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <View
            android:id="@+id/view_end_line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_color" />


    </LinearLayout>

    <TextView

        android:id="@+id/excel_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bt_szan"
        android:gravity="center"
        android:text="@string/excel"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/exit_settings"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView

        android:id="@+id/exit_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bt_szan"
        android:gravity="center"
        android:text="@string/txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>

